--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,6 +16,7 @@
   font-size: 1.4rem;
   position: sticky;
   top: 0;
+  z-index: 5;
 }
 .flex {
   display: flex;
@@ -36,23 +37,27 @@
   height: 46px;
   /* border-radius: 50%; */
   overflow: hidden;
-  margin-top: 4px;
   margin-left: 10px;
 }
 .navbar-logo {
   color: lightslategray;
   justify-self: start;
-  margin-left: 20px;
+  margin-left: 10px;
   margin-right: 10px;
-
   cursor: pointer;
   font-size: 40px;
+  font-weight: 600;
   text-decoration: none;
   border: none;
 }
 
-a {
+a:hover {
   text-decoration: none;
+  /* color: red; */
+}
+h1:hover {
+  text-decoration: none;
+  /* color: red; */
 }
 .main-nav-active .nav-links {
   text-decoration: underline;
@@ -75,12 +80,13 @@ a {
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  grid-gap: 5px;
+  grid-gap: 10px;
   list-style: none;
   text-align: center;
   width: 70vw;
   justify-content: end;
   margin-right: 1rem;
+  margin-top: 1.4rem;
 }
 
 .nav-links {
@@ -116,7 +122,7 @@ a {
 #main {
   height: 100vh;
 }
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 1168px) {
   .NavbarItems {
     position: sticky;
     top: 0;
@@ -126,16 +132,24 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 500px;
+    height: 1000px;
     position: absolute;
-    top: 80px;
+    top: 57px;
     left: -100%;
     opacity: 1;
     transition: all 0.4s ease;
   }
 
   .nav-menu.active {
-    background: black;
+    background: rgb(241, 223, 11);
+    background: linear-gradient(
+      90deg,
+      rgba(241, 223, 11, 1) 3%,
+      rgba(255, 248, 0, 1) 21%,
+      rgba(255, 236, 0, 1) 53%,
+      rgba(254, 255, 0, 1) 86%,
+      rgba(237, 216, 16, 1) 100%
+    );
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -144,9 +158,10 @@ a {
 
   .nav-links {
     text-align: center;
-    padding: 2rem;
+    padding: 2.5rem;
     width: 100%;
     display: table;
+    color: black;
   }
 
   .nav-links:hover {
@@ -154,7 +169,9 @@ a {
     border-radius: 0;
   }
   .main-nav-active .nav-links {
-    color: #2ecc71;
+    /* color: #2ecc71; */
+    color: black;
+    font-size: 1.8rem;
   }
 
   .navbar-logo {
@@ -177,7 +194,7 @@ a {
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(-100%, 60%);
+    transform: translate(-100%, 40%);
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -206,8 +223,7 @@ a {
     color: red;
     transition: 250ms;
   }
-
-  Button {
+  .btn {
     display: none;
   }
 }
