--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,21 +38,55 @@ textarea {
   box-shadow: 0 5px 10px #777;
 }
 input[type="submit"] {
-  width: 100%;
-  background-color: #2ecc71;
+  outline: none;
+  height: 40px;
+  text-align: center;
+  width: 130px;
+  border-radius: 40px;
+  background: #fff;
+  border: 2px solid #1fc464;
   color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: grab;
-}
-input[type="submit"]:hover {
+  letter-spacing: 1px;
+  text-shadow: 0;
+  font-size: 12px;
+  font-weight: bold;
+  width: 100%;
   background-color: #1fc464;
 }
+input[type="submit"]:hover {
+  background-color: white;
+  color: black;
+}
+input[type="submit"]:active {
+  letter-spacing: 2px;
+}
+input[type="submit"]:after {
+  content: "Enviado";
+}
+
 .container {
   margin: 2rem;
   width: auto;
   max-width: initial;
   border-radius: 5px;
   background-color: #f2f2f2;
+}
+
+.sent {
+  margin: 0;
+  text-align: center;
+  font-size: 1.5rem;
+  animation: sent 3s linear;
+  animation-fill-mode: forwards;
+  /* white-space: nowrap; */
+}
+
+@keyframes sent {
+  0% {
+    color: white;
+  }
+  100% {
+    color: black;
+    display: none;
+  }
 }
