--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,33 @@
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
+.back-to-top {
+  display: none;
+}
+.subir {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 70px;
+  right: 10px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 35px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  padding-left: 1px;
+  padding-top: 1px;
+  display: hidden;
+}
+.subir:hover {
+  color: #2ecc71;
+}
+
+.subir:hover {
+  color: black;
+}
 
 /* whatsAPP */
 .whatsapp_float {
@@ -19,6 +46,7 @@
   font-size: 35px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100;
+  padding-left: 2px;
 }
 
 .whatsapp_float:hover {
@@ -40,5 +68,16 @@
     bottom: 20px;
     right: 10px;
     font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .subir {
+    width: 40px;
+    height: 40px;
+    bottom: 70px;
+    right: 10px;
+    font-size: 22px;
+    padding-top: 4px;
   }
 }
