--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,92 +1,56 @@
-h3 {
-  text-decoration: underline;
-  text-align: center;
-  font-family: cursive;
-}
-#wrapper {
-  border: 1px solid white;
-  -webkit-box-shadow: 0 5px 10px #777;
-  -moz-box-shadow: 0 5px 10px #777;
-  box-shadow: 0 5px 10px #777;
-}
-/* contact form CSS */
-/* .form { */
-/* max-width: 430px; */
-/* } */
-/* .center {
-} */
-label {
-  /* text-decoration: underline; */
-  font-size: 1.2rem;
-  font-weight: 550;
+.footer-container {
+  background-color: #000000;
+  /* padding: 1rem 1rem 2rem 1rem; */
+  color: #ffffff;
+  /* display: flex; */
 }
 
-input[type="text"],
-input[type="email"],
-select,
-textarea {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 4px;
-  margin-bottom: 14px;
-  resize: vertical;
-  -webkit-box-shadow: 0 5px 10px #777;
-  -moz-box-shadow: 0 5px 10px #777;
-  box-shadow: 0 5px 10px #777;
-}
-input[type="submit"] {
-  outline: none;
-  height: 40px;
-  text-align: center;
-  width: 130px;
-  border-radius: 40px;
-  background: #fff;
-  border: 2px solid #1fc464;
-  color: white;
-  letter-spacing: 1px;
-  text-shadow: 0;
-  font-size: 12px;
-  font-weight: bold;
-  width: 100%;
-  background-color: #1fc464;
-}
-input[type="submit"]:hover {
-  background-color: white;
-  color: black;
-}
-input[type="submit"]:active {
-  letter-spacing: 2px;
-}
-input[type="submit"]:after {
-  content: "Enviado";
+/* .footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  flex-direction: row;
+}  */
+
+.footer-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.container {
-  margin: 2rem;
-  width: auto;
-  max-width: initial;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-}
-
-.sent {
-  margin: 0;
-  text-align: center;
+.footer-heading h2 {
+  margin-bottom: 1.5rem;
+  margin: 1rem;
   font-size: 1.5rem;
-  animation: sent 3s linear;
-  animation-fill-mode: forwards;
-  /* white-space: nowrap; */
+  text-decoration: underline;
+  color: #ffffff;
 }
 
-@keyframes sent {
-  0% {
-    color: white;
-  }
-  100% {
-    color: black;
-    display: none;
-  }
+.footer-heading a {
+  color: #ffffff;
+  /* text-decoration: none; */
+  margin-bottom: 0.9rem;
+  font-size: 25px;
+}
+
+.footer-heading a:hover {
+  color: #2ecc71;
+  transition: 0.2s ease-out;
+  text-decoration: underline;
+}
+
+.servi-links-footer:focus {
+  text-decoration: underline;
+  color: #2ecc71;
+}
+.activatres {
+  text-decoration: underline;
+}
+#center {
+  text-align: center;
+}
+
+.footer-3 {
+  /* margin-right: 3rem; */
 }
