--- a/src/components/Pages/Productos.css
+++ b/src/components/Pages/Productos.css
@@ -2,30 +2,118 @@
   background: rgb(0, 0, 0);
   background: linear-gradient(
     90deg,
-    rgba(0, 0, 0, 1) 3%,
-    rgba(255, 38, 0, 1) 21%,
-    rgba(218, 62, 14, 1) 53%,
-    rgba(172, 36, 13, 1) 86%,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(91, 17, 5, 1) 5%,
+    rgba(148, 41, 23, 1) 10%,
+    rgba(213, 43, 13, 1) 20%,
+    rgba(224, 41, 10, 1) 30%,
+    rgba(255, 37, 0, 1) 53%,
+    rgba(224, 41, 10, 1) 70%,
+    rgba(213, 43, 13, 1) 80%,
+    rgba(148, 41, 23, 1) 90%,
+    rgba(91, 17, 5, 1) 95%,
     rgba(0, 0, 0, 1) 100%
   );
+  height: 20rem;
 }
 .card-matafuegos {
-  margin: 2rem;
+  /* margin: 2rem; */
+}
+.tit-mat {
+  /* color: white; */
 }
 .card-matafuego {
-  margin: 2rem 2rem 0rem 2rem;
+  /* background-color: black; */
+  /* margin: 2rem 2rem 0rem 2rem; */
 }
 
-.img-matafuego1 {
-  /* width: 40%; */
-  /* height: auto; */
+.img-c {
   object-fit: contain;
+  width: 100%;
+  /* display: inline-block; */
 }
-.img-matafuego03 {
-  /* width: 500px; */
-  /* height: 600px; */
-  object-fit: contain;
+.carousel {
+  text-align: center;
+  /* margin-top: 8rem; */
 }
-.card-matafuegos03 {
-  /* height: 800px; */
+
+/* sanid para vos! */
+.animation {
+  /* margin: 300px; */
+}
+@keyframes showTopText {
+  0% {
+    transform: translate3d(0, 100%, 0);
+  }
+  40%,
+  60% {
+    transform: translate3d(0, 50%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+@keyframes showBottomText {
+  0% {
+    transform: translate3d(0, -100%, 0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+}
+.animated-title {
+  color: #222;
+  font-weight: 900;
+  font-family: Roboto, Arial, sans-serif;
+  height: 50rem;
+  left: 50%;
+  position: absolute;
+  top: 28%;
+  transform: translate(-50%, -50%);
+  width: 50vmin;
+}
+
+.animated-title > div {
+  height: 50%;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+.animated-title > div div {
+  font-size: 2.5rem;
+  padding: 2vmin 0;
+  position: absolute;
+}
+.animated-title > div div span {
+  display: block;
+}
+.animated-title > div.text-top {
+  border-bottom: 0.5vmin solid #000;
+  top: 0;
+}
+.animated-title > div.text-top div {
+  animation: showTopText 1s;
+  animation-delay: 0.5s;
+  animation-fill-mode: forwards;
+  bottom: 0;
+  transform: translate(0, 100%);
+}
+.animated-title > div.text-top div span:first-child {
+  color: white;
+}
+.animated-title > div.text-bottom {
+  bottom: 0;
+}
+.animated-title > div.text-bottom div {
+  animation: showBottomText 0.5s;
+  animation-delay: 1.75s;
+  animation-fill-mode: forwards;
+  top: 0;
+  transform: translate(0, -100%);
+}
+.animacion {
+  /* text-align: center; */
+}
+
+@media screen and (max-width: 1200) {
 }
